# C_GUIDE

./: CMakeLists.txt  Makefile
include/: calc.h  color.h  operations.h
src/c_files/: add.c  calc.c  color.c  divide.c  multiply.c  subtract.c
src/cpp_files/: calc.cpp  divide.cpp  main.cpp  multiply.cpp
